# modm

./: .gitignore  CMakeLists.txt  Info.plist  README.md  resources.qrc
resources/logotypes/: icon.icns  logotype_app.icns
src/: main.cpp
